--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "react-emojis": "^1.0.6",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
