--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-cookie": "^7.1.4",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-emojis": "^1.0.6",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.2.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
