--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-emojis": "^1.0.6",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "universal-cookie": "^7.2.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
