--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-table": "^8.20.1",
+    "add": "^2.0.6",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,6 +38,8 @@
     "react-emojis": "^1.0.6",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "shadcn-ui": "^0.8.0",
+    "table": "^6.8.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
